Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Creando blogpost</h1>
-    <p>Este seria el parrafo de inicio</p>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Aca va el titulo del blogpost sobre bandas</h1>
+            <p>Este es el parrafo de inicio donde vamos a dar una presentacion</p>
+        </div>
+    </div>
 </body>
 </html>
