estructura inicial de la cabezera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabezera">
+            Cabezera
+
+        </div>
         <div id="post">
             <h1>Aca va el titulo del blogpost sobre bandas</h1>
             <p>Este es el parrafo de inicio donde vamos a dar una presentacion</p>
