Cabezera terminada con diseño Verde

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,9 +9,8 @@
 <body>
     <div id="container">
         <div id="cabezera">
-            Cabezera
-
-        </div>
+            Blog Loco <span id="tagline">El blog mas flashero del internet</span>
+        </div>    
         <div id="post">
             <h1>Aca va el titulo del blogpost sobre bandas</h1>
             <p>Este es el parrafo de inicio donde vamos a dar una presentacion</p>
