Agregado contenido adicional y otra fuente

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
         <div id="post">
             <h1>Aca va el titulo del blogpost sobre bandas</h1>
             <p>Este es el parrafo de inicio donde vamos a dar una presentacion</p>
+            <p>
+                Este blog te enseña a como realizar lo indefinido con un cucharada de harina seca
+            </p>
         </div>
     </div>
 </body>
