--- a/blogpost.html
+++ b/blogpost.html
@@ -12,10 +12,10 @@
             Blog Loco <span id="tagline">El blog mas flashero del internet</span>
         </div>    
         <div id="post">
-            <h1>Aca va el titulo del blogpost sobre bandas</h1>
+            <h1>Aca va el titulo del blogpost sobre Cosas locas</h1>
             <p>Este es el parrafo de inicio donde vamos a dar una presentacion</p>
             <p>
-                Este blog te enseña a como realizar lo indefinido con un cucharada de harina seca
+                Este blog te enseña a como realizar lo indefinido con un cucharada de harina seca. Partiendo de una base de horarios definidos
             </p>
         </div>
     </div>
