Agregue el logo del Header

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabezera">
+            <img src="C:\Users\Mateo\proyecto\Imagenes/Dragonauta.jpg" alt="Logo" height="50px" width="50px">
             Blog Loco <span id="tagline">El blog mas flashero del internet</span>
         </div>    
         <div id="post">
