--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,10 @@
                 Este blog te enseña a como realizar lo indefinido con un cucharada de harina seca. Partiendo de una base de horarios definidos
             </p>
         </div>
+        <div id="footer">
+            Hecho gracias a platzi.com
+        </div>
     </div>
 </body>
+
 </html>
