--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,8 @@
         <div id="post">
             <h1>Ac&aacute; va el titulo del blogpost sobre Cosas locas</h1>
             <p>Este es el p&aacute;rrafo de inicio donde vamos a dar una presentacion</p>
+            <p><img src="C:\Users\Mateo\proyecto\Imagenes/sci-fi.jpg" alt="Imagen" width="100%"> 
+            </p>
             <p>
                 Este blog te enseña a como realizar lo indefinido con un cucharada de harina seca. Partiendo de una base de horarios definidos
             </p>
