Agrege la imagen desde un sitio externo

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
         <div id="post">
             <h1>Ac&aacute; va el titulo del blogpost sobre Cosas locas</h1>
             <p>Este es el p&aacute;rrafo de inicio donde vamos a dar una presentacion</p>
-            <p><img src="C:\Users\Mateo\proyecto\Imagenes/sci-fi.jpg" alt="Imagen" width="100%"> 
+            <p><a href="https://ibb.co/dL3hHhF"><img src="https://i.ibb.co/JybhShV/sci-fi.jpg" alt="sci-fi" width="100%"></a> 
             </p>
             <p>
                 Este blog te enseña a como realizar lo indefinido con un cucharada de harina seca. Partiendo de una base de horarios definidos
